--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: server.js
-
+        run: echo Add other actions
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
