--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://neiht13:hj6scsg4@cluster0.tmy5xk2.mongodb.net?retryWrites=true&w=majority
+MONGODB_URI="mongodb+srv://neiht13:hj6scsg4@cluster0.tmy5xk2.mongodb.net?retryWrites=true&w=majority"
 PORT=5000
