--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,5 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: run install
+        run: npn install
+      - name: run server  
         run: node server.js
